# chronicle

./: .gitignore  README.md  data_log.hpp  justfile  meson.build  message.hpp  severity.hpp  structured_log.hpp  traits.hpp
benchmark/: CMakeLists.txt  benchmark.cpp  chronicle-benchmark.sln  chronicle-benchmark.vcxproj  chronicle-benchmark.vcxproj.filters  meson.build
fields/: default_format.hpp  format.hpp  severity.hpp  source.hpp  thread_id.hpp  utc_time_ms.hpp  utc_time_only_ms.hpp
include/chronicle/: attributes_log.hpp  data_log.hpp  message.hpp  severity.hpp  sink.hpp  structured_log.hpp  text_log.hpp  traits.hpp
include/chronicle/bundled/theater/: mpsc_queue.hpp  spsc_queue.hpp
include/chronicle/bundled/uformat/: continuous_string.hpp  fixed_string.hpp  print.hpp  texter.hpp  utf8.hpp
include/chronicle/detail/chineseroom/: fixed_string.hpp  texter.hpp
include/chronicle/fields/: default_format.hpp  format.hpp  severity.hpp  severity_marker.hpp  source.hpp  thread_id.hpp  utc_time_microseconds.hpp  utc_time_milliseconds.hpp  utc_time_ms.hpp  utc_time_only_ms.hpp  utc_time_only_us.hpp  utc_time_us.hpp
include/chronicle/sinks/: conerr.hpp  conout.hpp  daily_rotated_file.hpp  file.hpp  output.hpp
include/hydra/: activity.hpp
sinks/: daily_rotated_file.hpp  file.hpp
stand/: meson.build  stand.cpp
test/: CMakeLists.txt  activity.hpp  atomic_cv.hpp  attributes_log.hpp  chronicle-test.sln  chronicle-test.vcxproj  chronicle-test.vcxproj.filters  daily_rotated_file.hpp  daily_rotated_file.test.hpp  data_log.hpp  data_log.test.hpp  meson.build  mpsc_queue.hpp  structured_log.test.hpp  test.cpp  text_log.hpp  text_log.test.hpp
